--- a/src/app/shared/pickers/map-modal/map-modal.component.html
+++ b/src/app/shared/pickers/map-modal/map-modal.component.html
@@ -5,7 +5,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>  
-
 <ion-content>
   <ion-buttons>
     <ion-button (click)="closeModal()"><ion-icon slot="start" name="close-circle-outline">Close</ion-icon></ion-button>
@@ -14,7 +13,8 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div #map class = "map" id="google-map"></div>
+        <capacitor-google-map #map class = "map" id="google-map"></capacitor-google-map> -->
+
       </ion-col>
 
       
