--- a/src/app/shared/pickers/map-modal/map-modal.component.scss
+++ b/src/app/shared/pickers/map-modal/map-modal.component.scss
@@ -1,6 +1,7 @@
 .map {
-    height: 400px; /* The height is 400 pixels */
-    width: 100%;
+  display: inline-block;
+  width: 100%;
+  height: 400px;
   }
   
   
